--- a/07_acceso_annimo_y_autenticado_formas_de_autenticacin.html
+++ b/07_acceso_annimo_y_autenticado_formas_de_autenticacin.html
@@ -75,24 +75,15 @@
 <div id="main-wrapper">
 <div id="main"><a name="main"></a>
 <div id="nodeDecoration"><h1 id="nodeTitle">07| Acceso anónimo y autenticado. Formas de autenticación</h1></div>
-<div class="iDevice_wrapper FreeTextIdevice" id="id26">
-<div class="iDevice emphasis0">
-<div id="ta26_86" class="block iDevice_content">
-
-</div>
-</div>
-</div>
 <div class="iDevice_wrapper FreeTextIdevice" id="id27">
 <div class="iDevice emphasis0">
 <div id="ta27_86" class="block iDevice_content">
-<p>En els següents enllaços disposeu de la informació necessària per a aprendre a:</p>
+<p>En los siguientes enlaces dispones de la información necesaria para aprender a:</p>
 <ul>
-<li>Controlar l'accés als recursos del servidor. (<a href="https://httpd.apache.org/docs/2.4/es/howto/access.html" target="_blank" rel="noopener noreferrer">https://httpd.apache.org/docs/2.4/es/howto/access.html</a>)</li>
-<li>Aprendre a configurar arxius <code>.htaccess</code> (<a href="https://httpd.apache.org/docs/2.4/es/howto/htaccess.htm">https://httpd.apache.org/docs/2.4/es/howto/htaccess.htm</a>l)</li>
-<li>Protegir l'accés a determinats recursos mitjançant sistemes d'autenticació. (<a href="https://httpd.apache.org/docs/2.4/es/howto/auth.html" target="_blank" rel="noopener noreferrer">https://httpd.apache.org/docs/2.4/es/howto/auth.html</a>)</li>
+<li>Controlar el acceso a los recursos del servidor. (<a href="https://httpd.apache.org/docs/2.4/es/howto/access.html" target="_blank" rel="noopener noreferrer">https://httpd.apache.org/docs/2.4/es/howto/access.html</a>)</li>
+<li>Aprender a configurar archivos <code>.htaccess</code> (<a href="https://httpd.apache.org/docs/2.4/es/howto/htaccess.htm">https://httpd.apache.org/docs/2.4/es/howto/htaccess.htm</a>)</li>
+<li>Proteger el acceso a determinados recursos mediante sistemas de autenticación. (<a href="https://httpd.apache.org/docs/2.4/es/howto/auth.html" target="_blank" rel="noopener noreferrer">https://httpd.apache.org/docs/2.4/es/howto/auth.html</a>)</li>
 </ul>
-<p></p>
-<p><span style="font-size: 1em;"></span></p>
 </div>
 </div>
 </div>
