--- a/10_mapa_conceptual.html
+++ b/10_mapa_conceptual.html
@@ -79,9 +79,9 @@
 <div class="iDevice emphasis0">
 <div id="ta9_154" class="block iDevice_content">
 <div class="exe-figure exe-image position-center" style="width: 799px;">
-<div class="figcaption header"><strong>Mapa conceptual: el servei HTTP</strong></div>
+<div class="figcaption header"><strong>Mapa conceptual: el servicio web (HTTP)</strong></div>
 <img src="HTTP.png" alt="Mapa conceptual: el servei HTTP" width="799" height="453" />
-<div class="figcaption"><span class="author">Vicent Jordà</span>. <span class="title"><em>Mapa conceptual: el servei HTTP</em></span></div>
+<div class="figcaption"><span class="author">Vicent Jordà</span>. <span class="title"><em>Mapa conceptual: el servicio web (HTTP)</em></span></div>
 </div>
 <p></p>
 </div>
