--- a/11_cuestionario_de_repaso.html
+++ b/11_cuestionario_de_repaso.html
@@ -77,36 +77,36 @@
 <div id="nodeDecoration"><h1 id="nodeTitle">11| Cuestionario de repaso</h1></div>
 <div class="iDevice_wrapper activityIdevice em_iDevice em_iDevice_activity" id="id12">
 <div class="iDevice emphasis1" >
-<div class="iDevice_header"><h2 class="iDeviceTitle">Recull d'activitats</h2></div>
+<div class="iDevice_header"><h2 class="iDeviceTitle">Cuestionario de repaso</h2></div>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta12_41_2" class="block iDevice_content">
-<p style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Respon a la llibreta:</p>
+<p style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Responde:</p>
 <ol>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Definició del protocol HTTP. Característiques i funcions. Diferències respecte a HTTPS</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Com funciona el protocol HTTP?. Explica cada pas.</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Quins tipus de peticions pot sol·licitar el client al servidor HTTP? En què consisteix cadascuna?</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Tipus MIME. Definició i objectius. Posa 3 exemples.</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Codis d'estat. Definició. Objectius. Grups.</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Diferència entre servidor web i client web.</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Què són les galetes (<em>cookies</em>)?</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Què és un servidor web segur? Quins protocols utilitza?</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Defineix els següents conceptes:
+<li>Definición del protocolo HTTP. Características y funciones. Diferencias respecto a HTTPS.</li>
+<li>¿Cómo funciona el protocolo HTTP? Explica cada paso.</li>
+<li>¿Qué tipos de peticiones puede solicitar el cliente al servidor HTTP? ¿En qué consiste cada una?</li>
+<li>Tipos MIME. Definición y objetivos. Da 3 ejemplos.</li>
+<li>Códigos de estado. Definición. Objetivos. Grupos.</li>
+<li>Diferencia entre servidor web y cliente web.</li>
+<li>¿Qué son las cookies?</li>
+<li>¿Qué es un servidor web seguro? ¿Qué protocolos utiliza?</li>
+<li>Define los siguientes conceptos:
 <ol>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Signatura digital</li>
-<li style="margin-bottom: 0cm; font-weight: normal; line-height: 115%; orphans: 0; widows: 0;" align="justify">Certificat digital</li>
-<li style="margin-bottom: 0cm; font-weight: normal; line-height: 115%; orphans: 0; widows: 0;" align="justify">Autoritat certificadora</li>
-<li style="margin-bottom: 0cm; font-weight: normal; line-height: 115%; orphans: 0; widows: 0;" align="justify">Certificat de servidor segur</li>
+<li>Firma digital</li>
+<li>Certificado digital</li>
+<li>Autoridad certificadora</li>
+<li>Certificado de servidor seguro</li>
 </ol>
 </li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Explica els passos del funcionament del protocol HTTPS.</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Què és un servidor web virtual? Quins mètodes existeixen i en què consisteixen?</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Quines accions hem de realitzar per a tenir un allotjament basat en domini?</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Si en accedir a <span style="text-decoration: underline;">un directori </span>de la nostra web, dóna un error d'accés, a què pot ser degut? com ho podem solucionar?</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Per què alguns tipus de documents els obri el navegador directament i uns altres hem de fer ús de programes externs?</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Per a què serveix l'autenticació en un lloc web?</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Quins són els principals servidors web que s'utilitzen? Quines diferències hi ha entre ells?</li>
-<li style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Quines diferències existeixen entre pàgines web estàtiques i dinàmiques?</li>
+<li>Explica los pasos del funcionamiento del protocolo HTTPS.</li>
+<li>¿Qué es un servidor web virtual? ¿Qué métodos existen y en qué consisten?</li>
+<li>¿Qué acciones debemos realizar para tener un alojamiento basado en dominio?</li>
+<li>Si al acceder a un directorio de nuestra web, da un error de acceso, ¿a qué puede deberse? ¿Cómo podemos solucionarlo?</li>
+<li>¿Por qué algunos tipos de documentos los abre el navegador directamente y otros necesitan programas externos?</li>
+<li>¿Para qué sirve la autenticación en un sitio web?</li>
+<li>¿Cuáles son los principales servidores web que se utilizan? ¿Qué diferencias hay entre ellos?</li>
+<li>¿Qué diferencias existen entre páginas web estáticas y dinámicas?</li>
 </ol>
 </div>
 </div>
