--- a/21_un_poco_de_historia.html
+++ b/21_un_poco_de_historia.html
@@ -78,16 +78,16 @@
 <div class="iDevice_wrapper FreeTextIdevice" id="id31">
 <div class="iDevice emphasis0">
 <div id="ta31_85" class="block iDevice_content">
-<p>El protocol de transferència d’hipertext (HTTP, hyperText transfer protocol) és el motor que dóna vida a Internet, ja que és la base per a la web (<em>www, world wide</em> web).</p>
-<p>Des d’un punt de vista històric, la web fou creada l'any 1989 al Consell Europeu per la Recerca Nuclear (CERN, Centre Europeene pour la Recherche Nucleaire), amb seu a Ginebra, just a la frontera entre Suïssa i França. Val a dir que aquest organisme disposava (i disposa) d’una àmplia plantilla de científics de diferents països d’Europa que treballen en els seus acceleradors de partícules. En conseqüència, molts equips de treballadors estan integrats per membres de nacionalitats diferents. A més, molts dels experiments que s’hi fan destaquen per la seva complexitat i requereixen anys i anys de planificació i de construcció d’equipaments.</p>
+<p>El protocolo de transferencia de hipertexto (HTTP, <em>hyperText transfer protocol</em>) es el motor que da vida a Internet, ya que es la base de la web (<em>www, world wide web</em>).</p>
+<p>Desde un punto de vista histórico, la web fue creada en el año 1989 en el Consejo Europeo para la Investigación Nuclear (CERN, <em>Centre Européen pour la Recherche Nucléaire</em>), con sede en Ginebra, justo en la frontera entre Suiza y Francia. Cabe destacar que este organismo contaba (y cuenta) con una amplia plantilla de científicos de distintos países de Europa que trabajan en sus aceleradores de partículas. En consecuencia, muchos equipos de trabajo están integrados por miembros de diferentes nacionalidades. Además, muchos de los experimentos que allí se realizan destacan por su complejidad y requieren años de planificación y construcción de equipamientos.</p>
 <div class="exe-figure exe-image position-center" style="width: 600px;"><img src="berners-lee.jpg" alt="Tim Berners Lee" title="Tim Berners Lee" width="600" height="385" />
 <div class="figcaption"><span class="title"><em>Tim Berners Lee</em></span></div>
 </div>
-<p>Fou arran de la necessitat de disposar de múltiples grups de científics repartits pel món i col·laborant entre ells (enviant-se informes, dibuixos, esquemes, fotos i tot tipus de documents) que va néixer la web.</p>
+<p>Fue a raíz de la necesidad de disponer de múltiples grupos de científicos repartidos por el mundo y colaborando entre ellos (enviándose informes, dibujos, esquemas, fotos y todo tipo de documentos) que nació la web.</p>
 <div class="exe-figure exe-image position-center" style="width: 600px;"><img src="first-server.jpg" alt="Primer servidor HTTP" title="Primer servidor HTTP" width="600" height="450" />
 <div class="figcaption"><span class="title"><em>Primer servidor HTTP</em></span></div>
 </div>
-<p>És en els inicis del protocol HTTP, a mitjans de l’any 1990, quan trobem la versió 0.9. Aquesta versió tenia com a única finalitat transferir dades per Internet en forma de pàgines web escrites en llenguatge de marcatge d’hipertext (HTML, <em>HyperText Markup Language</em>). A partir de la versió 1.0 del protocol va sorgir la possibilitat de transferir missatges amb encapçalaments que descrivien el contingut dels missatges.</p>
+<p>Es en los inicios del protocolo HTTP, a mediados del año 1990, cuando encontramos la versión 0.9. Esta versión tenía como única finalidad transferir datos por Internet en forma de páginas web escritas en lenguaje de marcado de hipertexto (HTML, <em>HyperText Markup Language</em>). A partir de la versión 1.0 del protocolo surgió la posibilidad de transferir mensajes con encabezados que describían el contenido de los mensajes.</p>
 </div>
 </div>
 </div>
