--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
 <div class="iDevice_content_wrapper">
 <div id="ta0_41_2" class="block iDevice_content">
 <ul>
-<li>Descriure els fonaments i protocols en els quals es basa el funcionament d'un servidor web.</li>
-<li>Instal·lar un servidor web.</li>
-<li>Crear llocs virtuals.</li>
-<li>Verificar les possibilitats existents per tal de discriminar el lloc destí del trafic entrant al servidor.</li>
-<li>Configurar la seguretat del servidor.</li>
-<li>Comprovar l'accés dels usuaris al servidor.</li>
-<li>Diferenciar i provar l'execució de codi al servidor i al client.</li>
-<li>Instal·lar mòduls sobre el servidor.</li>
-<li>Establir mecanismes per assegurar les comunicacions entre el client i el servidor.</li>
+<li>Describir los fundamentos y protocolos en los que se basa el funcionamiento de un servidor web.</li>
+<li>Instalar un servidor web.</li>
+<li>Crear sitios virtuales.</li>
+<li>Verificar las posibilidades existentes para discriminar el sitio destino del tráfico entrante al servidor.</li>
+<li>Configurar la seguridad del servidor.</li>
+<li>Comprobar el acceso de los usuarios al servidor.</li>
+<li>Diferenciar y probar la ejecución de código en el servidor y en el cliente.</li>
+<li>Instalar módulos sobre el servidor.</li>
+<li>Establecer mecanismos para asegurar las comunicaciones entre el cliente y el servidor.</li>
 </ul>
 </div>
 </div>
@@ -105,16 +105,16 @@
 <div class="iDevice_content_wrapper">
 <div id="ta2_43_2" class="block iDevice_content">
 <ol>
-<li>Introducció</li>
-<li>El protocol HTTP</li>
-<li>Etapes d'una transició HTTP</li>
-<li>L'estàndard HTTP/1.0</li>
-<li>Instal·lació i configuració d'Apache2</li>
-<li>Servidors virtuals. Nom d'encapçalament de host.</li>
-<li>Identificació d'un usuari virtual.</li>
-<li>Accés anònim i autenticat. Formes d'autenticació.</li>
-<li>Execució de codi. Scripts de servidor i de client.</li>
-<li>Establiment de connexions segures .</li>
+<li>Introducción</li>
+<li>El protocolo HTTP</li>
+<li>Etapas de una transacción HTTP</li>
+<li>El estándar HTTP/1.0</li>
+<li>Instalación y configuración de Apache2</li>
+<li>Servidores virtuales. Nombre de encabezado de host.</li>
+<li>Identificación de un usuario virtual.</li>
+<li>Acceso anónimo y autenticado. Formas de autenticación.</li>
+<li>Ejecución de código. Scripts de servidor y de cliente.</li>
+<li>Establecimiento de conexiones seguras.</li>
 </ol>
 </div>
 </div>
