--- a/prctica_4_control_de_acceso_autorizacin_y_autenticacin.html
+++ b/prctica_4_control_de_acceso_autorizacin_y_autenticacin.html
@@ -77,30 +77,26 @@
 <div id="nodeDecoration"><h1 id="nodeTitle">Práctica 4: Control de acceso, autorización y autenticación</h1></div>
 <div class="iDevice_wrapper activityIdevice em_iDevice em_iDevice_activity" id="id29">
 <div class="iDevice emphasis1" >
-<div class="iDevice_header"><h2 class="iDeviceTitle">06.04. Control d'accés, autorització i autenticació</h2></div>
+<div class="iDevice_header"><h2 class="iDeviceTitle">Control de acceso, autorización y autenticación</h2></div>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta29_42_2" class="block iDevice_content">
-<h2>Objectius</h2>
-<h2>Activitats</h2>
-<h3>Activitat 1: control d'accés</h3>
+<h2>Objetivos</h2>
+<h2>Actividades</h2>
+<h3>Actividad 1: control de acceso</h3>
 <ol>
-<li>Crea un directori que responga a la següent URL <code>http://www.xarxa00.lan/admin</code><span style="font-size: 1em;">.</span></li>
-<li>Configura el node virtual perquè sols es puga accedir al directori <code>admin</code> des de la xarxa interna.</li>
-<li>Configura el node virtual perquè quan algú intente accedir des de la xarxa externa es mostre un error personalitzat. Fes ús la directiva <code>ErrorDocument</code></li>
-<li>Fes les captures adequades per demostrar que funciona.</li>
+<li>Crea un directorio que responda a la siguiente URL <code>http://www.xarxa00.lan/admin</code>.</li>
+<li>Configura el nodo virtual para que solo se pueda acceder al directorio <code>admin</code> desde la red interna.</li>
+<li>Configura el nodo virtual para que cuando alguien intente acceder desde la red externa se muestre un error personalizado. Utiliza la directiva <code>ErrorDocument</code>.</li>
+<li>Realiza las capturas adecuadas para demostrar que funciona.</li>
 </ol>
-<h3>Activitat 2: autenticació bàsica</h3>
+<h3>Actividad 2: autenticación básica</h3>
 <ol>
-<li>Configura el node virtual perquè el directori <code>admin</code><span style="font-size: 1em;"> necessite usuari per accedir-hi.</span></li>
-<li>Crea l'usuari <code>mark</code> amb la contrasenya <code>1234</code>.</li>
-<li>Configura les directives perquè sols l'usuari <code>mark</code> puga entrar al directori <code>admin</code>.</li>
-<li>Fes les captures adequades per demostrar que funciona.</li>
+<li>Configura el nodo virtual para que el directorio <code>admin</code> requiera usuario para acceder.</li>
+<li>Crea el usuario <code>mark</code> con la contraseña <code>1234</code>.</li>
+<li>Configura las directivas para que solo el usuario <code>mark</code> pueda acceder al directorio <code>admin</code>.</li>
+<li>Realiza las capturas adecuadas para demostrar que funciona.</li>
 </ol>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
 </div>
 </div>
 </div>
@@ -112,9 +108,9 @@
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta19_43_2" class="block iDevice_content">
-<p>05.08 - Activitat: Autenticació i autorització en Apache2<br />Los archivos .htaccess permiten a los usuarios que no tienen permisos modificar la configuración y así poder ejercer algún control sobre el comportamiento de su parte del servidor Apache2.</p>
+<p>Actividad: Autenticación y autorización en Apache2<br />Los archivos .htaccess permiten a los usuarios que no tienen permisos modificar la configuración y así poder ejercer algún control sobre el comportamiento de su parte del servidor Apache2.</p>
 <p>Las directivas que modifican el comportamiento se colocan en un archivo .htaccess situado en el directorio al que tiene que afectar, junto a todos sus subdirectorios. El archivo .htaccess se carga cada vez que se solicita un documento.</p>
-<p>Font: https://httpd.apache.org/docs/trunk/es/howto/auth.html</p>
+<p>Fuente: <a href="https://httpd.apache.org/docs/trunk/es/howto/auth.html" target="_blank" rel="noopener noreferrer">https://httpd.apache.org/docs/trunk/es/howto/auth.html</a></p>
 </div>
 </div>
 </div>
