--- a/prctica_6_asegurando_las_comunicaciones.html
+++ b/prctica_6_asegurando_las_comunicaciones.html
@@ -81,10 +81,10 @@
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta20_44_2" class="block iDevice_content">
-<h2>05.09 - Activitat: Activar la seguretat en Apache (SSL)</h2>
+<h2>Actividad: Activar la seguridad en Apache (SSL)</h2>
 <div id="intro" class="box generalbox boxaligncenter">
 <div class="no-overflow">
-<p>Configura WP perquè funcione sempre amb SSL.</p>
+<p>Configura WP para que funcione siempre con SSL.</p>
 <p>https://www.digitalocean.com/community/tutorials/how-to-create-a-ssl-certificate-on-apache-for-ubuntu-14-04</p>
 </div>
 </div>
