--- a/04_el_estndar_http10.html
+++ b/04_el_estndar_http10.html
@@ -80,23 +80,23 @@
 <div class="iDevice_wrapper FreeTextfpdIdevice" id="id8">
 <div class="iDevice emphasis0">
 <div id="ta8_154" class="block iDevice_content">
-<p>L’estàndard HTTP/1.0 recull, únicament, tres ordres que representen les operacions de recepció, enviament de la informació i revisió de l’estat.</p>
+<p>El estándar HTTP/1.0 recoge únicamente tres órdenes que representan las operaciones de recepción, envío de información y revisión del estado.</p>
 <ul>
-<li><strong>Mètode de petició GET</strong>. S’utilitza per sol·licitar un recurs del servidor. Sempre que premem sobre un enllaç o escrivim una adreça d’Internet a la barra de navegació d’un navegador web, estem utilitzant aquest mètode de petició. Com a resultat, el servidor HTTP envia el document corresponent a l’adreça d’Internet seleccionada.</li>
-<li><strong>Mètode de petició HEAD</strong>. Sol·licita informació sobre un recurs com, per exemple, la seva grandària, el tipus, la data de modificació, etc. Acostuma a ser utilitzat pels gestors de memòries cau de pàgines o pels servidors intermediaris (proxy server) per conèixer quan cal actualitzar la còpia que es manté d’un arxiu determinat.</li>
-<li><strong>Mètode de petició POST</strong>. S’utilitza per enviar informació al servidor, com per exemple, les dades contingudes en un formulari. El servidor passarà aquesta informació a un procés encarregat del seu tractament (acostuma a ser una aplicació del servidor). L’operació que es durà a terme amb la informació proporcionada dependrà de l’adreça d’Internet (URL) utilitzada, principalment, en els formularis.</li>
+<li><strong>Método de petición GET</strong>. Se utiliza para solicitar un recurso del servidor. Siempre que pulsamos sobre un enlace o escribimos una dirección de Internet en la barra de navegación de un navegador web, estamos utilizando este método de petición. Como resultado, el servidor HTTP envía el documento correspondiente a la dirección de Internet seleccionada.</li>
+<li><strong>Método de petición HEAD</strong>. Solicita información sobre un recurso, como su tamaño, tipo, fecha de modificación, etc. Suele ser utilizado por los gestores de caché de páginas o por los servidores intermedios (<em>proxy servers</em>) para determinar cuándo es necesario actualizar la copia almacenada de un archivo determinado.</li>
+<li><strong>Método de petición POST</strong>. Se utiliza para enviar información al servidor, como los datos contenidos en un formulario. El servidor pasará esta información a un proceso encargado de su tratamiento (generalmente, una aplicación del servidor). La operación que se llevará a cabo con la información proporcionada dependerá de la dirección de Internet (URL) utilizada, especialmente en los formularios.</li>
 </ul>
-<p>Val a dir que un client web selecciona automàticament les ordres HTTP necessàries per recollir la informació per a l’usuari. Per tant, davant l’activació d’un enllaç, sempre s’executa una operació GET amb la finalitat de recollir el document corresponent.</p>
-<p>Tal com mostra la imatge següent, la comunicació entre el navegador i el servidor es duu a terme en dues etapes. D’una banda, el navegador fa una sol·licitud HTTP que, posteriorment, és processada pel servidor que, en conseqüència, envia una resposta HTTP.</p>
+<p>Es importante señalar que un cliente web selecciona automáticamente las órdenes HTTP necesarias para recuperar la información para el usuario. Por lo tanto, al activar un enlace, siempre se ejecuta una operación GET para recuperar el documento correspondiente.</p>
+<p>Tal como muestra la siguiente imagen, la comunicación entre el navegador y el servidor se lleva a cabo en dos etapas. En primer lugar, el navegador realiza una solicitud HTTP que, posteriormente, es procesada por el servidor, el cual responde con una respuesta HTTP.</p>
 <figure class="exe-figure exe-image position-center license-CC-BY-SA" style="width: 600px;">
-<figcaption class="figcaption header"><strong>Comunicació navegador - servidor</strong></figcaption>
-<img src="smx_m07u3-13_1.png" alt="Comunicació navegador - servidor" width="600" height="270" />
-<figcaption class="figcaption"><a href="http://ioc.xtec.cat/materials/FP/Materials/2201_SMX/SMX_2201_M07/web/html/WebContent/u3/a1/continguts.html" target="_blank" class="author" rel="noopener noreferrer">IOC</a>. <a href="Comunicació navegador - servidor" target="_blank" class="title" rel="noopener noreferrer"><em>Comunicació navegador - servidor</em></a> <span class="license"><span class="sep">(</span><a href="http://creativecommons.org/licenses/?lang=ca-ES" rel="license nofollow noopener noreferrer" target="_blank" title="Creative Commons BY-SA">CC BY-SA</a><span class="sep">)</span></span></figcaption>
+<figcaption class="figcaption header"><strong>Comunicación navegador - servidor</strong></figcaption>
+<img src="smx_m07u3-13_1.png" alt="Comunicación navegador - servidor" width="600" height="270" />
+<figcaption class="figcaption"><a href="http://ioc.xtec.cat/materials/FP/Materials/2201_SMX/SMX_2201_M07/web/html/WebContent/u3/a1/continguts.html" target="_blank" class="author" rel="noopener noreferrer">IOC</a>. <a href="Comunicación navegador - servidor" target="_blank" class="title" rel="noopener noreferrer"><em>Comunicación navegador - servidor</em></a> <span class="license"><span class="sep">(</span><a href="http://creativecommons.org/licenses/?lang=ca-ES" rel="license nofollow noopener noreferrer" target="_blank" title="Creative Commons BY-SA">CC BY-SA</a><span class="sep">)</span></span></figcaption>
 </figure>
-<p>Si avaluarem amb deteniment la sol·licitud HTTP ens trobaríem amb un conjunt de línies de text que el navegador envia al servidor. D’una banda, trobaríem una <strong>línia de sol·licitud</strong>, és a dir, una línia que especifica el tipus de document sol·licitat, el <strong>mètode</strong> que s’aplicarà i la <strong>versió del protocol</strong> utilitzat. Aquesta línia estarà integrada per tres elements separats per un espai, és a dir, el mètode, l’adreça web i el protocol HTTP utilitzat pel client.</p>
-<p><strong></strong>A continuació, trobaríem els camps de l’encapçalament de sol·licitud, és a dir, un conjunt de línies opcionals que permeten aportar informació addicional sobre la sol·licitud i/o el client (navegador, sistema operatiu, etc.). Cadascuna d’aquestes línies estarà formada per un nom que descriu el tipus d’encapçalament, seguit per dos punts (:) i pel valor de l’encapçalament.</p>
-<p>Finalment, el cos de la sol·licitud és un conjunt de línies opcionals separades de les línies anteriors amb una línia en blanc. La seva finalitat és permetre que s’enviïn dades al servidor utilitzant un formulari durant la transmissió.</p>
-<p>Un exemple de sol·licitud HTTP seria el següent:</p>
+<p>Si analizamos con detenimiento la solicitud HTTP, encontramos un conjunto de líneas de texto que el navegador envía al servidor. En primer lugar, está la <strong>línea de solicitud</strong>, que especifica el tipo de documento solicitado, el <strong>método</strong> aplicado y la <strong>versión del protocolo</strong> utilizada. Esta línea está compuesta por tres elementos separados por un espacio: el método, la dirección web y el protocolo HTTP utilizado por el cliente.</p>
+<p>A continuación, se encuentran los campos del encabezado de la solicitud, un conjunto de líneas opcionales que proporcionan información adicional sobre la solicitud y/o el cliente (navegador, sistema operativo, etc.). Cada una de estas líneas está formada por un nombre que describe el tipo de encabezado, seguido de dos puntos (:) y el valor del encabezado.</p>
+<p>Finalmente, el cuerpo de la solicitud consiste en un conjunto de líneas opcionales separadas de las anteriores por una línea en blanco. Su propósito es permitir el envío de datos al servidor mediante un formulario durante la transmisión.</p>
+<p>Un ejemplo de solicitud HTTP sería el siguiente:</p>
 <div class="highlighted-code language-c">
 <div>
 <pre><code>GET http://www.pego.org HTTP/1.0
@@ -104,46 +104,46 @@ Accept : Text/html If-Modified-Since : Saturday, 19-May-2006 17:39:13 GMT
 User-Agent : Mozilla/6.0 (compatible; MSIE 5.0; Windows XP)</code></pre>
 </div>
 </div>
-<p>En conseqüència, la sol·licitud HTTP rebria una resposta HTTP, és a dir, un conjunt de línies que el servidor enviarà al navegador web. Com en el cas de la sol·licitud, la resposta HTTP conté alguns elements definitoris com, per exemple, una línia d’estat. Aquesta línia especifica la versió del protocol utilitzada i l’estat de la sol·licitud en procés mitjançant un text explicatiu i un codi.</p>
-<p>En el cas dels camps de l'encapçalament de resposta, aquest és un conjunt de línies opcionals que permeten aportar informació addicional sobre la resposta i/o el servidor. Cadascuna d'aquestes línies es compon d'un nom que defineix el tipus d'encapçalament, seguit per dos punts (:) i pel valor de l'encapçalament.</p>
-<p>En el cas del cos de la resposta, aquest conté el document sol·licitat. A mode d'exemple, a continuació es mostra un exemple d'una resposta HTTP:</p>
+<p>En consecuencia, la solicitud HTTP recibiría una respuesta HTTP, es decir, un conjunto de líneas que el servidor enviará al navegador web. Al igual que la solicitud, la respuesta HTTP contiene ciertos elementos clave, como la línea de estado. Esta línea especifica la versión del protocolo utilizada y el estado de la solicitud en curso, proporcionando un código y un mensaje explicativo.</p>
+<p>En cuanto a los campos del encabezado de respuesta, este es un conjunto de líneas opcionales que aportan información adicional sobre la respuesta y/o el servidor. Cada una de estas líneas consta de un nombre que define el tipo de encabezado, seguido de dos puntos (:) y el valor del encabezado.</p>
+<p>El cuerpo de la respuesta contiene el documento solicitado. A modo de ejemplo, a continuación se muestra una respuesta HTTP:</p>
 <div class="highlighted-code language-c">
 <div>
 <pre><code>HTTP/1.0 200 OK Date: 19 May 2006 17:40:12 GMT Server : Microsoft-IIS/2.0
 Content-Type : text/HTML Content-Length : 1245 Last-Modified : 11 May 2006 08:29:13 GMT</code></pre>
 </div>
 </div>
-<p>Pel que fa als <strong>codis de resposta</strong>, aquests són els codis que es veuen quan el navegador no pot mostrar la pàgina web sol·licitada. La sintaxi d'una resposta HTTP és una línia d'estat i té una estructura fixa on s'indica la versió, el codi de l'error i un text explicatiu.</p>
-<p>Els possibles codis d'estat s'identifiquen amb números de tres xifres i es classifiquen en cinc grups segons si són informatius (1xx), d'èxit en la sol·licitud (2xx), per tornar a adreçar la sol·licitud (3xx), per un error generat en el client (4xx) o bé per errors generats en el servidor (5xx).</p>
-<p>Les respostes més típiques són els codis 200 per indicar la confirmació de la petició i el 404 per indicar que l'objecte sol·licitat no es troba disponible.</p>
+<p>En lo que respecta a los <strong>códigos de respuesta</strong>, estos son los códigos que se muestran cuando el navegador no puede acceder a la página web solicitada. La sintaxis de una respuesta HTTP incluye una línea de estado con una estructura fija que indica la versión, el código del error y un mensaje explicativo.</p>
+<p>Los posibles códigos de estado se identifican con números de tres dígitos y se clasifican en cinco grupos: códigos informativos (1xx), éxito en la solicitud (2xx), redirección de la solicitud (3xx), errores generados en el cliente (4xx) y errores generados en el servidor (5xx).</p>
+<p>Las respuestas más comunes son el código 200, que indica la confirmación de la petición, y el 404, que indica que el objeto solicitado no se encuentra disponible.</p>
 </div>
 </div>
 </div>
 <div class="iDevice_wrapper FreeTextIdevice" id="id41">
 <div class="iDevice emphasis0">
 <div id="ta41_85" class="block iDevice_content">
-<p>Alguns dels codis d'estat més  habituals són els següents:</p>
+<p>Algunos de los códigos de estado más habituales son los siguientes:</p>
 <h3>Successful 2xx</h3>
-<p>This class of status code indicates that the client's request was successfully received, understood, and accepted.</p>
+<p>Esta clase de código de estatus indica que la petición del cliente fue recibida, comprendida y aceptada con éxito.</p>
 <p>200 OK</p>
-<p>The request has succeeded. The information returned with the response is dependent on the method used in the request, as follows:</p>
-<p>GET: an entity corresponding to the requested resource is sent in the response;</p>
-<p>HEAD: the response must only contain the header information and no Entity-Body;</p>
-<p>POST: an entity describing or containing the result of the action.</p>
+<p>La petición ha tenido éxito. La información devuelta con la respuesta depende del método usado en la petición, tal y como sigue:</p>
+<p>GET: una entidad correspondiente al recurso solicitado se envía con la respuesta;</p>
+<p>HEAD: la respuesta debe contener únicamente la información de cabecera y sin Entidad-Cuerpo;</p>
+<p>POST: una entidad que describe o contiene el resultado de la acción.</p>
 <h3>Redirection 3xx</h3>
 <p>301 Moved Permanently</p>
 <p>302 Moved Temporarily</p>
 <p>304 Not Modified</p>
 <h3>Client Error 4xx</h3>
 <p>400 Bad Request</p>
-<p>401 Unauthorized. The request requires user authentication.</p>
-<p>403 Forbidden. The server understood the request, but is refusing to fulfill it. <br />404 Not Found. The server has not found anything matching the Request-URI.</p>
+<p>401 Unauthorized. La petición requiere autenticación de usuario.</p>
+<p>403 Forbidden. El servidor entiende la petición, pero rechaza satisfacerla. <br />404 Not Found. El servidor no ha encontrado nada que concuerde con la URI de la petición.</p>
 <h3>Server Error 5xx</h3>
-<p>500 Internal Server Error. The server encountered an unexpected condition which prevented it from fulfilling the request.</p>
-<p>502 Bad Gateway. The server, while acting as a gateway or proxy, received an invalid response from the upstream server it accessed in attempting to fulfill the request.</p>
-<p>503 Service Unavailable. The server is currently unable to handle the request due to a temporary overloading or maintenance of the server.</p>
+<p>500 Internal Server Error. El servidor encontró una condición inesperada que impide satisfacer la petición.</p>
+<p>502 Bad Gateway. El servidor, actuando como gateway o proxy, recibió una respuesta inválida del servidor superior al que accedió intentando satisfacer la petición.</p>
+<p>503 Service Unavailable. Actualmente el servidor no es capaz de gestionar la petición debido a una sobrecarga o mantenimiento temporal del servidor.</p>
 <div class="exe-block-info">
-<p>Per a més informació visiteu: <a href="https://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html#sec10">https://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html#sec10</a></p>
+<p>Para más información, visita: <a href="https://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html#sec10">https://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html#sec10</a></p>
 </div>
 </div>
 </div>
@@ -153,8 +153,8 @@ Content-Type : text/HTML Content-Length : 1245 Last-Modified : 11 May 2006 08:29
 <div class="iDevice_destacadofpd">
 <div id="ta10_152" class="block iDevice_content">
 <div class="exe-block-info">
-<p><strong>Línia d’encapçalament HTTP</strong></p>
-<p>Camp fonamental que defineix gran part de la informació que s’intercanvia entre els clients i els servidors. Aquestes línies permeten l’enviament d’informació descriptiva en la transacció i faciliten, per exemple, l’autenticació o identificació dels usuaris.</p>
+<p><strong>Línea de encabezado HTTP</strong></p>
+<p>Campo fundamental que define gran parte de la información que se intercambia entre los clientes y los servidores. Estas líneas permiten el envío de información descriptiva en la transacción y facilitan, por ejemplo, la autenticación o identificación de los usuarios.</p>
 </div>
 </div>
 </div>
