--- a/06_servidores_virtuales.html
+++ b/06_servidores_virtuales.html
@@ -80,83 +80,77 @@
 <div class="iDevice_wrapper FreeTextIdevice" id="id22">
 <div class="iDevice emphasis0">
 <div id="ta22_86" class="block iDevice_content">
-<p>Quan parlem de la creació de llocs virtuals ens estem referint a l’acció de fer treballar més d’un lloc web, per exemple, les pàgines web <code>www.web1.cat</code> i <code>www.web2.cat</code> en un únic ordinador.</p>
-<p>Tal com mostra la figura següent tot i que tots dos dominis estiguen treballant en la mateixa màquina física, mai no ens n’adonarem quan visitem aquests llocs web.</p>
-<p><img src="smx_m07u3-36_1.png" alt="Servidors virtuals" title="Servidors virtuals" style="display: block; margin-left: auto; margin-right: auto;" width="430" height="623" /></p>
-<p>Els llocs web virtuals es poden <strong>basar tant en adreces d'Internet (IP)</strong>, on cada lloc web té una adreça d'Internet (IP) diferent, com <strong>en noms diferents</strong>, és a dir, diversos llocs web amb diferents noms de domini estaran treballant amb una única adreça d'Internet (IP). Val a dir que, tot i que estiguem treballant en la mateixa màquina física, com a usuaris observarem que l'usuari, quan visita aquests llocs web, no se n'adona.</p>
-<p>Per explicar la tècnica de la creació de llocs web virtuals, treballarem amb dos exemples:<code> www.aplicacionsweb.org</code> i <code>www.serveisenxarxa.org</code>.</p>
-<p>Els dos llocs webs virtuals seran servits pel mateix servidor web. El directori per defecte on es troben les pàgines web és <code>/var/www</code>, on crearem les diferents estructures de directori. Per tant, dins dels directoris <code>/var/www/aplicacionsweb</code> i <code>/var/www/seveisenxarxa</code> trobarem els arxius dels llocs web corresponents a les pàgines web anteriors.</p>
-<p>Per a la configuració i posada en marxa dels llocs web virtuals hem de construir, en primer lloc, l'estructura de directoris on desarem els llocs. Utilitzarem dintre del directori reservat a cada lloc web la carpeta de <code>public_html</code> per allotjar els arxius del lloc web.</p>
-<p>Un cop definits els directoris on desarem els llocs web virtuals, haurem d’adreçar-nos al directori <code>/etc/apache2</code>, on trobarem els arxius de configuració d’Apache. En aquest cas, l'arxiu principal de configuració és <code>apache2.conf</code>.</p>
-<p>Considerant que per treballar amb els llocs virtuals haurem de fer alguns canvis en el contingut de l’arxiu, haurem de considerar, abans d'establir cap canvi, quina configuració de llocs web virtuals volem crear, és a dir, llocs virtuals basats en adreces d’Internet (IP) o bé basats en noms.<span style="font-size: 1em;"></span></p>
+<p>Cuando hablamos de la creación de sitios virtuales nos referimos a la acción de hacer funcionar más de un sitio web, por ejemplo, las páginas web <code>www.web1.cat</code> y <code>www.web2.cat</code> en un único ordenador.</p>
+<p>Tal como muestra la siguiente figura, aunque ambos dominios estén funcionando en la misma máquina física, nunca nos daremos cuenta cuando visitamos estos sitios web.</p>
+<p><img src="smx_m07u3-36_1.png" alt="Servidores virtuales" title="Servidores virtuales" style="display: block; margin-left: auto; margin-right: auto;" width="430" height="623" /></p>
+<p>Los sitios web virtuales pueden <strong>basarse tanto en direcciones de Internet (IP)</strong>, donde cada sitio web tiene una dirección de Internet (IP) diferente, como <strong>en nombres diferentes</strong>, es decir, varios sitios web con diferentes nombres de dominio estarán funcionando con una única dirección de Internet (IP). Cabe destacar que, aunque estemos trabajando en la misma máquina física, como usuarios no percibiremos esta diferencia al visitar estos sitios web.</p>
+<p>Para explicar la técnica de la creación de sitios web virtuales, trabajaremos con dos ejemplos:<code> www.aplicacionesweb.org</code> y <code>www.serveisenxarxa.org</code>.</p>
+<p>Ambos sitios web virtuales serán servidos por el mismo servidor web. El directorio por defecto donde se encuentran las páginas web es <code>/var/www</code>, donde crearemos las diferentes estructuras de directorio. Por lo tanto, dentro de los directorios <code>/var/www/aplicacionesweb</code> y <code>/var/www/seveisenxarxa</code> encontraremos los archivos de los sitios web correspondientes a las páginas web anteriores.</p>
+<p>Para la configuración y puesta en marcha de los sitios web virtuales, primero debemos construir la estructura de directorios donde almacenaremos los sitios. Dentro del directorio reservado a cada sitio web, utilizaremos la carpeta <code>public_html</code> para alojar los archivos del sitio web.</p>
+<p>Una vez definidos los directorios donde almacenaremos los sitios web virtuales, debemos dirigirnos al directorio <code>/etc/apache2</code>, donde encontraremos los archivos de configuración de Apache. En este caso, el archivo principal de configuración es <code>apache2.conf</code>.</p>
+<p>Considerando que para trabajar con los sitios virtuales debemos realizar algunos cambios en el contenido del archivo, es importante definir previamente qué tipo de configuración de sitios web virtuales queremos crear, es decir, sitios virtuales basados en direcciones de Internet (IP) o bien basados en nombres.</p>
 </div>
 </div>
 </div>
 <div class="iDevice_wrapper FreeTextIdevice" id="id25">
 <div class="iDevice emphasis0">
 <div id="ta25_86" class="block iDevice_content">
-<h3>Servidors virtuals en Apache</h3>
-<p>Apache2 es lliura amb una configuració predeterminada <em>virtual-host-friendly</em>. És a dir, està configurat amb un únic <em>host</em> virtual predeterminat (utilitzant la directiva <code>VirtualHost</code>) que es pot modificar o utilitzar com si tingués un sol lloc o que s'utilitzés com a plantilla per a servidors virtuals addicionals si teniu diversos llocs. Si es deixa sol, l'amfitrió virtual predeterminat servirà com a lloc predeterminat o els usuaris del lloc veuran si l'URL que introduïu no coincideix amb la directiva <code>ServerName</code> de cap dels vostres llocs personalitzats. Per modificar el servidor virtual predeterminat, editeu el fitxer <code>/etc/apache2/sites-available/000-default.conf.</code></p>
-<p><span style="font-size: 1em;">Si voleu configurar un nou host virtual o lloc, copieu aquests fitxers en el mateix directori amb el nom que seleccioneu. Per exemple:</span></p>
+<h3>Servidores virtuales en Apache</h3>
+<p>Apache2 se entrega con una configuración predeterminada <em>virtual-host-friendly</em>. Es decir, está configurado con un único <em>host</em> virtual predeterminado (utilizando la directiva <code>VirtualHost</code>) que se puede modificar o utilizar como si tuviera un solo sitio o como plantilla para servidores virtuales adicionales si tienes varios sitios. Si se deja tal cual, el anfitrión virtual predeterminado servirá como sitio por defecto o los usuarios verán este sitio si la URL que introducen no coincide con la directiva <code>ServerName</code> de ninguno de sus sitios personalizados. Para modificar el servidor virtual predeterminado, edita el archivo <code>/etc/apache2/sites-available/000-default.conf.</code></p>
+<p>Si deseas configurar un nuevo host virtual o sitio, copia estos archivos en el mismo directorio con el nombre que elijas. Por ejemplo:</p>
 <div class="highlighted-code language-clike">
 <div>
-<pre><code>sudo cp /etc/apache2/sites-available/000-default.conf /etc/apache2/sites-available/elmeullocweb.conf
-</code></pre>
+<pre><code>sudo cp /etc/apache2/sites-available/000-default.conf /etc/apache2/sites-available/misitio.conf</code></pre>
 </div>
 </div>
-<p>La configuració per defecte és la següent:</p>
+<p>La configuración por defecto es la siguiente:</p>
 <div class="highlighted-code language-clike line-numbers">
 <div>
 <pre><code>&lt;VirtualHost *:80&gt;
-	# The ServerName directive sets the request scheme, hostname and port that
-	# the server uses to identify itself. This is used when creating
-	# redirection URLs. In the context of virtual hosts, the ServerName
-	# specifies what hostname must appear in the request's Host: header to
-	# match this virtual host. For the default virtual host (this file) this
-	# value is not decisive as it is used as a last resort host regardless.
-	# However, you must set it for any further virtual host explicitly.
+	# La directiva ServerName establece el esquema de solicitud, el nombre de host y el puerto
+	# que el servidor usa para identificarse. Se usa al crear URLs de redirección.
+	# Para hosts virtuales, ServerName especifica qué nombre de host debe aparecer en la
+	# cabecera Host: de la solicitud para coincidir con este host virtual.
+	# Para el host virtual predeterminado, este valor no es decisivo ya que se usa como
+	# último recurso.
 	#ServerName www.example.com
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
 
-	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
+	# Niveles de log disponibles: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
-	# It is also possible to configure the loglevel for particular
-	# modules, e.g.
+	# También es posible configurar el nivel de log para módulos específicos.
 	#LogLevel info ssl:warn
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-	# For most configuration files from conf-available/, which are
-	# enabled or disabled at a global level, it is possible to
-	# include a line for only one particular virtual host. For example the
-	# following line enables the CGI configuration for this host only
-	# after it has been globally disabled with "a2disconf".
+	# Para la mayoría de los archivos de configuración en conf-available/
+	# que se activan o desactivan globalmente, es posible incluir
+	# una línea para un host virtual en particular. Por ejemplo:
 	#Include conf-available/serve-cgi-bin.conf
 &lt;/VirtualHost&gt;
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet</code></pre>
 </div>
 </div>
-<p>Una vegada realitzats els canvis activarem en lloc web amb el comandament <code>a2ensite</code>:</p>
+<p>Una vez realizados los cambios, activaremos el sitio web con el comando <code>a2ensite</code>:</p>
 <div class="highlighted-code language-clike">
 <div>
-<pre><code>#a2ensite elmeullocweb</code></pre>
+<pre><code>sudo a2ensite misitio</code></pre>
 </div>
 </div>
-<p>Després carregarem de nou la configuració d'Apache2 amb el comandament:</p>
+<p>Luego, recargaremos la configuración de Apache2 con el siguiente comando:</p>
 <div class="highlighted-code language-clike">
 <div>
-<pre><code>#service apache2 reload
-</code></pre>
+<pre><code>sudo service apache2 reload</code></pre>
 </div>
 </div>
-<p>Per a la depuració d'error en els arxius de configuració de llocs virtuals cal utilitzar:</p>
+<p>Para depurar errores en los archivos de configuración de sitios virtuales, usa:</p>
 <div class="highlighted-code language-clike">
 <div>
-<pre><code>#apache2ctl -t</code></pre>
+<pre><code>sudo apache2ctl -t</code></pre>
 </div>
 </div>
 </div>
@@ -165,9 +159,9 @@
 <div class="iDevice_wrapper FreeTextIdevice" id="id24">
 <div class="iDevice emphasis0">
 <div id="ta24_86" class="block iDevice_content">
-<h2>Llocs virtuals basats en l’adreça d’Internet (IP)</h2>
-<p>En aquest cas, podrem allotjar múltiples dominis en una única màquina que disposarà de diferents adreces d’Internet (IP) i, en cadascuna d’elles, s’hi executarà un lloc virtual.</p>
-<p>Haurem de canviar la directiva <code>&lt;VirtualHost *:80&gt;</code> de forma que s'especifique a quina adreça IP ha de respondre. Per exemple <code>&lt;VirtualHost 192.168.2.112:80&gt;</code> si ha de respondre a l'adreça IP 192.168.2.112.</p>
+<h2>Sitios virtuales basados en la dirección de Internet (IP)</h2>
+<p>En este caso, podemos alojar múltiples dominios en una única máquina que dispondrá de diferentes direcciones de Internet (IP) y, en cada una de ellas, se ejecutará un sitio virtual.</p>
+<p>Debemos cambiar la directiva <code>&lt;VirtualHost *:80&gt;</code> para especificar a qué dirección IP debe responder. Por ejemplo, <code>&lt;VirtualHost 192.168.2.112:80&gt;</code> si debe responder a la dirección IP 192.168.2.112.</p>
 <div class="highlighted-code language-clike">
 <div>
 <pre><code>&lt;VirtualHost 192.168.2.112:80&gt;
@@ -175,15 +169,14 @@
 </strong>&lt;/VirtualHost&gt;</code></pre>
 </div>
 </div>
-<p></p>
 </div>
 </div>
 </div>
 <div class="iDevice_wrapper FreeTextIdevice" id="id23">
 <div class="iDevice emphasis0">
 <div id="ta23_86" class="block iDevice_content">
-<h2>Llocs virtuals basats en el nom de domini</h2>
-<p>El problema dels llocs web virtuals basats en adreces d’Internet (IP) és que, considerant que s'allotgen molts dominis, necessitarem una adreça d’Internet (IP) per a cadascun dels dominis. Per tant, pot ser preferible treballar amb llocs virtuals basats en noms. En aquest cas, després de copiar l'arxiu de configuració per defecte, haurem d'afegir la directriu <code>ServerName</code> donat que, si bé els llocs virtuals es troben en la mateixa IP, s'ha de canviar el nom per a cadascun dels llocs. En el cas de treballar amb servidor DNS, aquest haurà d'estar configurat per resoldre aquests llocs en les zones corresponents. I la directiva DocumentRoot per a indicar des de quin directori es serviran les pàgines. Aquesta seria la configuració per a lloc www.serveisenxarxa.org:</p>
+<h2>Sitios virtuales basados en el nombre de dominio</h2>
+<p>El problema de los sitios web virtuales basados en direcciones de Internet (IP) es que, considerando que se alojan muchos dominios, necesitaremos una dirección de Internet (IP) para cada uno de los dominios. Por lo tanto, puede ser preferible trabajar con sitios virtuales basados en nombres. En este caso, después de copiar el archivo de configuración por defecto, debemos agregar la directiva <code>ServerName</code> ya que, aunque los sitios virtuales se encuentren en la misma IP, se debe cambiar el nombre para cada uno de los sitios. En el caso de trabajar con un servidor DNS, este deberá estar configurado para resolver estos sitios en las zonas correspondientes. Además, se debe definir la directiva <code>DocumentRoot</code> para indicar desde qué directorio se servirán las páginas. Esta sería la configuración para el sitio www.serveisenxarxa.org:</p>
 <div class="highlighted-code language-clike">
 <div>
 <pre><code>&lt;VirtualHost *:80&gt;
@@ -192,8 +185,7 @@ DocumentRoot </span>"/var/www/serveisenxarxa/public_html"<strong>
 </strong>&lt;/VirtualHost&gt;</code></pre>
 </div>
 </div>
-<p>Finalment, per verificar que tots els canvis aplicats han tingut èxit, tornarem a arrencar el servidor web.</p>
-<p></p>
+<p>Finalmente, para verificar que todos los cambios aplicados han tenido éxito, reiniciaremos el servidor web.</p>
 </div>
 </div>
 </div>
