--- a/09_establecimiento_de_conexiones_seguras.html
+++ b/09_establecimiento_de_conexiones_seguras.html
@@ -78,12 +78,12 @@
 <div class="iDevice_wrapper FreeTextIdevice" id="id28">
 <div class="iDevice emphasis0">
 <div id="ta28_86" class="block iDevice_content">
-<p>Un lloc web segur és un lloc web que utilitza el protocol HTTPS en lloc del protocol HTTP. De fet, el protocol HTTPS és idèntic al protocol HTTP amb l’excepció que la transferència d’informació entre el client (navegador web) i el servidor (servidor web) viatja per la xarxa d’Internet xifrada a partir d’uns complexos algoritmes de xifrat de dades proporcionats pel paquet OpenSSL.</p>
-<p>Aquestes eines ajuden el sistema a implementar tot un ventall de protocols relacionats amb la seguretat.</p>
-<p>Els algoritmes de xifrat utilitzats reuneixen les característiques necessàries per garantir que la informació que surt del servidor cap al client estigui xifrada i que només pugui ser desxifrada pel client, i que la informació que surt del client cap al servidor estigui xifrada i només pugui ser desxifrada pel servidor.</p>
-<p>Per exemple, en el cas que durant la transferència de la informació un pirata informàtic fes una còpia dels paquets de dades i intentés desxifrarlos, els algoritmes garantirien que ho hagués de fer mitjançant la força bruta (és a dir, provant totes les claus possibles) en un termini mínim d’uns quants anys.</p>
-<p>Durant la transmissió, s'utilitzaran algoritmes de xifrat simètrics, però, amb la finalitat d’intercanviar les claus de xifrat, hi ha una sessió inicial de xifrat asimètric.</p>
-<p>Recurs: <a href="https://www.digitalocean.com/community/tutorials/how-to-create-a-ssl-certificate-on-apache-for-debian-8" target="_blank" rel="noopener noreferrer">Configurar un certificat SSL en Apache [EN] </a></p>
+<p>Un sitio web seguro es un sitio web que utiliza el protocolo HTTPS en lugar del protocolo HTTP. De hecho, el protocolo HTTPS es idéntico al protocolo HTTP con la excepción de que la transferencia de información entre el cliente (navegador web) y el servidor (servidor web) viaja por la red de Internet cifrada a partir de complejos algoritmos de cifrado de datos proporcionados por el paquete OpenSSL.</p>
+<p>Estas herramientas ayudan al sistema a implementar todo un abanico de protocolos relacionados con la seguridad.</p>
+<p>Los algoritmos de cifrado utilizados reúnen las características necesarias para garantizar que la información que sale del servidor hacia el cliente esté cifrada y que solo pueda ser descifrada por el cliente, y que la información que sale del cliente hacia el servidor esté cifrada y solo pueda ser descifrada por el servidor.</p>
+<p>Por ejemplo, en el caso de que durante la transferencia de la información un pirata informático hiciera una copia de los paquetes de datos e intentara descifrarlos, los algoritmos garantizarían que tuviera que hacerlo mediante fuerza bruta (es decir, probando todas las claves posibles) en un plazo mínimo de varios años.</p>
+<p>Durante la transmisión, se utilizarán algoritmos de cifrado simétricos, pero, con la finalidad de intercambiar las claves de cifrado, hay una sesión inicial de cifrado asimétrico.</p>
+<p>Recurso: <a href="https://www.digitalocean.com/community/tutorials/how-to-create-a-ssl-certificate-on-apache-for-debian-8" target="_blank" rel="noopener noreferrer">Configurar un certificado SSL en Apache [EN]</a></p>
 </div>
 </div>
 </div>
