--- a/12_bibliografia.html
+++ b/12_bibliografia.html
@@ -78,9 +78,9 @@
 <div class="iDevice_wrapper FreeTextIdevice" id="id16">
 <div class="iDevice emphasis0">
 <div id="ta16_85" class="block iDevice_content">
-<p>Col·laboradors de l'IOC. <em>Gestió de servidors web</em> [en línia].  Institut Obert de Catalunya, 2017 [data de consulta: 10 de maig del 2017]. Disponible en &lt;<a href="http://ioc.xtec.cat/materials/FP/Materials/2201_SMX/SMX_2201_M07/web/html/WebContent/u3/a1/continguts.html" target="_blank">http://ioc.xtec.cat/materials/FP/Materials/2201_SMX/SMX_2201_M07/web/html/WebContent/u3/a1/continguts.html</a>&gt;.</p>
-<p>Colaboradores de Wikipedia. <em>Anexo:Códigos de estado HTTP</em> [en línea]. Wikipedia, La enciclopedia libre, 2017 [fecha de consulta: 18 de mayo del 2017]. Disponible en &lt;<a href="https://es.wikipedia.org/w/index.php?title=Anexo:C%C3%B3digos_de_estado_HTTP&amp;oldid=98689282">https://es.wikipedia.org/w/index.php?title=Anexo:C%C3%B3digos_de_estado_HTTP&amp;oldid=98689282</a>&gt;.</p>
-<p>Col·laboradors de la Viquipèdia. <em>Multi-Purpose Internet Mail Extensions</em> [en línia]. Viquipèdia, l'Enciclopèdia Lliure, 2017 [data de consulta: 11 de febrer del 2017]. Disponible en &lt;<a href="https://ca.wikipedia.org/w/index.php?title=Multi-Purpose_Internet_Mail_Extensions&amp;oldid=18126401">https://ca.wikipedia.org/w/index.php?title=Multi-Purpose_Internet_Mail_Extensions&amp;oldid=18126401</a>&gt;.</p>
+<p>Colaboradores del IOC. <em>Gestió de servidors web</em> [en línea].  Institut Obert de Catalunya, 2023 [fecha de consulta: 13 de febrero de 2025]. Disponible en &lt;<a href="https://ioc.xtec.cat/materials/FP/Recursos/fp_smx_m07_/web/fp_smx_m07_htmlindex/WebContent/u3/a1/continguts.html">https://ioc.xtec.cat/materials/FP/Recursos/fp_smx_m07_/web/fp_smx_m07_htmlindex/WebContent/u3/a1/continguts.html</a>&gt;.</p>
+<p>Colaboradores de Wikipedia. <em>Anexo:Códigos de estado HTTP</em> [en línea]. Wikipedia, La enciclopedia libre, 2025 [fecha de consulta: 13 de febrero de 2025]. Disponible en &lt;<a href="https://es.wikipedia.org/wiki/Anexo:C%C3%B3digos_de_estado_HTTP">https://es.wikipedia.org/wiki/Anexo:C%C3%B3digos_de_estado_HTTP</a>&gt;.</p>
+<p>Colaboradores de Wikipedia. <em>Multi-Purpose Internet Mail Extensions</em> [en línea]. Wikipedia, La enciclopedia libre, 2025 [fecha de consulta: 13 de febrero de 2025]. Disponible en &lt;<a href="https://es.wikipedia.org/wiki/Multipurpose_Internet_Mail_Extensions">https://es.wikipedia.org/wiki/Multipurpose_Internet_Mail_Extensions</a>&gt;.</p>
 </div>
 </div>
 </div>
