--- a/prctica_2_instalacin_de_apache2.html
+++ b/prctica_2_instalacin_de_apache2.html
@@ -77,30 +77,30 @@
 <div id="nodeDecoration"><h1 id="nodeTitle">Práctica 2: Instalación de Apache2</h1></div>
 <div class="iDevice_wrapper activityIdevice em_iDevice em_iDevice_activity" id="id13">
 <div class="iDevice emphasis1" >
-<div class="iDevice_header"><h2 class="iDeviceTitle">06.02: Instal·lació Apache2</h2></div>
+<div class="iDevice_header"><h2 class="iDeviceTitle">Instalación de Apache2</h2></div>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta13_42_2" class="block iDevice_content">
-<h3>Objectiu</h3>
+<h3>Objetivo</h3>
 <ul>
-<li>Aprendre a instal·lar Apache2</li>
-<li>Conèixer els seus arxius més importants</li>
-<li>Configurar el servidor web per defecte.</li>
-<li>Verificar els arxius de registre.</li>
+<li>Aprender a instalar Apache2</li>
+<li>Conocer sus archivos más importantes</li>
+<li>Configurar el servidor web por defecto.</li>
+<li>Verificar los archivos de registro.</li>
 </ul>
-<h3>Activitat</h3>
+<h3>Actividad</h3>
 <ol>
-<li>Instal·la el servidor web Apache2. </li>
-<li>Comprova que pots accedir tant des de la xarxa interna com la externa.</li>
-<li>On es guarda la configuració del servidor virtual per defecte? I la configuració general d'Apache2?</li>
-<li>Quina és la ruta del directori des del que s'han de servir els arxius del servidor virtual per defecte?</li>
-<li>On es troba l'arxiu <code>httpd.conf</code>?</li>
-<li>Quina diferència hi ha entre el directori <code>conf-available</code> i <code>conf-enabled</code>?</li>
-<li>En quin arxiu es troba la configuració del lloc web virtual per defecte? </li>
-<li>Configura el DNS de forma que l'adreça: <a href="http://www.aula##.lan">www.aula##.lan</a> permeta l'accés al servidor web, tant des de la xarxa interna com des de l'externa.</li>
+<li>Instala el servidor web Apache2.</li>
+<li>Comprueba que puedes acceder tanto desde la red interna como externa.</li>
+<li>¿Dónde se guarda la configuración del servidor virtual por defecto? ¿Y la configuración general de Apache2?</li>
+<li>¿Cuál es la ruta del directorio desde donde deben servirse los archivos del servidor virtual por defecto?</li>
+<li>¿Dónde se encuentra el archivo <code>httpd.conf</code>?</li>
+<li>¿Qué diferencia hay entre el directorio <code>conf-available</code> y <code>conf-enabled</code>?</li>
+<li>¿En qué archivo se encuentra la configuración del sitio web virtual por defecto?</li>
+<li>Configura el DNS de forma que la dirección: <a href="http://www.aula##.lan">www.aula##.lan</a> permita el acceso al servidor web, tanto desde la red interna como externa.</li>
 </ol>
 <h3>Recursos</h3>
-<p>En la <a href="https://help.ubuntu.com/16.04/serverguide/httpd.html" target="_blank" title="Ubuntu Server Guide 16.04" rel="noopener noreferrer">Ubuntu Server Guide</a><span> disposes de la informació necessària per a fer la instal·lació, la configuració i respondre les preguntes.</span></p>
+<p>En la <a href="https://help.ubuntu.com/16.04/serverguide/httpd.html" target="_blank" title="Ubuntu Server Guide 16.04" rel="noopener noreferrer">Guía del Servidor de Ubuntu</a> dispones de la información necesaria para realizar la instalación, configuración y responder las preguntas.</p>
 </div>
 </div>
 </div>
